JCR Program/jobParser.py
# Generated from job.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class jobParser ( Parser ):

    grammarFileName = "job.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'style'", "'free'", "'maven'", "'project_name'", 
                     "'source'", "'{'", "'}'", "'build_triggers'", "'poll_scm'", 
                     "'build_after_other_projects'", "'build_periodically'", 
                     "'p-'", "'*'", "'building'", "'sh-'", "'goals_options'", 
                     "'root_pom'", "'post_step'", "'run_if_build_succeed'", 
                     "'run_if_build_succeed_unstable'", "'run_regardless'", 
                     "'project_url'", "'git_repo_urls'", "'git_repo_branches'", 
                     "'credential_name'", "'trigger_method'", "'project_names'", 
                     "'ignore_post_commit_hooks'", "'yes'", "'no'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Project_url", "Git_repo_urls", 
                      "Git_repo_branches", "Credential_name", "Trigger_method", 
                      "Project_names", "Ignore_post_commit_hooks", "Yes", 
                      "No", "DIGIT", "Identifier", "COMMENT", "BlockComment", 
                      "WS" ]

    RULE_job = 0
    RULE_configuration_scopes = 1
    RULE_style = 2
    RULE_project_name = 3
    RULE_project_source_scope = 4
    RULE_project_source_op = 5
    RULE_build_triggers_scope = 6
    RULE_triggers = 7
    RULE_poll_scm = 8
    RULE_build_after_other_projects = 9
    RULE_build_priodically = 10
    RULE_pattern = 11
    RULE_building_scope = 12
    RULE_build_directives = 13
    RULE_shell_command = 14
    RULE_goals_option = 15
    RULE_root_pom = 16
    RULE_post_step = 17

    ruleNames =  [ "job", "configuration_scopes", "style", "project_name", 
                   "project_source_scope", "project_source_op", "build_triggers_scope", 
                   "triggers", "poll_scm", "build_after_other_projects", 
                   "build_priodically", "pattern", "building_scope", "build_directives", 
                   "shell_command", "goals_option", "root_pom", "post_step" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    Project_url=22
    Git_repo_urls=23
    Git_repo_branches=24
    Credential_name=25
    Trigger_method=26
    Project_names=27
    Ignore_post_commit_hooks=28
    Yes=29
    No=30
    DIGIT=31
    Identifier=32
    COMMENT=33
    BlockComment=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class JobContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def configuration_scopes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.Configuration_scopesContext)
            else:
                return self.getTypedRuleContext(jobParser.Configuration_scopesContext,i)


        def style(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.StyleContext)
            else:
                return self.getTypedRuleContext(jobParser.StyleContext,i)


        def project_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.Project_nameContext)
            else:
                return self.getTypedRuleContext(jobParser.Project_nameContext,i)


        def getRuleIndex(self):
            return jobParser.RULE_job

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJob" ):
                listener.enterJob(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJob" ):
                listener.exitJob(self)




    def job(self):

        localctx = jobParser.JobContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_job)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jobParser.T__0) | (1 << jobParser.T__3) | (1 << jobParser.T__4) | (1 << jobParser.T__7) | (1 << jobParser.T__13))) != 0):
                self.state = 39
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jobParser.T__4, jobParser.T__7, jobParser.T__13]:
                    self.state = 36
                    self.configuration_scopes()
                    pass
                elif token in [jobParser.T__0]:
                    self.state = 37
                    self.style()
                    pass
                elif token in [jobParser.T__3]:
                    self.state = 38
                    self.project_name()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Configuration_scopesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def project_source_scope(self):
            return self.getTypedRuleContext(jobParser.Project_source_scopeContext,0)


        def build_triggers_scope(self):
            return self.getTypedRuleContext(jobParser.Build_triggers_scopeContext,0)


        def building_scope(self):
            return self.getTypedRuleContext(jobParser.Building_scopeContext,0)


        def getRuleIndex(self):
            return jobParser.RULE_configuration_scopes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfiguration_scopes" ):
                listener.enterConfiguration_scopes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfiguration_scopes" ):
                listener.exitConfiguration_scopes(self)




    def configuration_scopes(self):

        localctx = jobParser.Configuration_scopesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_configuration_scopes)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jobParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.project_source_scope()
                pass
            elif token in [jobParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.build_triggers_scope()
                pass
            elif token in [jobParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.building_scope()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jobParser.RULE_style

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyle" ):
                listener.enterStyle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyle" ):
                listener.exitStyle(self)




    def style(self):

        localctx = jobParser.StyleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_style)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(jobParser.T__0)
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==jobParser.T__1 or _la==jobParser.T__2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Project_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(jobParser.Identifier)
            else:
                return self.getToken(jobParser.Identifier, i)

        def getRuleIndex(self):
            return jobParser.RULE_project_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject_name" ):
                listener.enterProject_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject_name" ):
                listener.exitProject_name(self)




    def project_name(self):

        localctx = jobParser.Project_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_project_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(jobParser.T__3)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.match(jobParser.Identifier)
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jobParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Project_source_scopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def project_source_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.Project_source_opContext)
            else:
                return self.getTypedRuleContext(jobParser.Project_source_opContext,i)


        def getRuleIndex(self):
            return jobParser.RULE_project_source_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject_source_scope" ):
                listener.enterProject_source_scope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject_source_scope" ):
                listener.exitProject_source_scope(self)




    def project_source_scope(self):

        localctx = jobParser.Project_source_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_project_source_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(jobParser.T__4)
            self.state = 59
            self.match(jobParser.T__5)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jobParser.Project_url) | (1 << jobParser.Git_repo_urls) | (1 << jobParser.Git_repo_branches) | (1 << jobParser.Credential_name))) != 0):
                self.state = 60
                self.project_source_op()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Project_source_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Project_url(self):
            return self.getToken(jobParser.Project_url, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(jobParser.Identifier)
            else:
                return self.getToken(jobParser.Identifier, i)

        def Git_repo_urls(self):
            return self.getToken(jobParser.Git_repo_urls, 0)

        def Git_repo_branches(self):
            return self.getToken(jobParser.Git_repo_branches, 0)

        def Credential_name(self):
            return self.getToken(jobParser.Credential_name, 0)

        def getRuleIndex(self):
            return jobParser.RULE_project_source_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject_source_op" ):
                listener.enterProject_source_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject_source_op" ):
                listener.exitProject_source_op(self)




    def project_source_op(self):

        localctx = jobParser.Project_source_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_project_source_op)
        self._la = 0 # Token type
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jobParser.Project_url]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(jobParser.Project_url)
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 69
                    self.match(jobParser.Identifier)
                    self.state = 72 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break

                pass
            elif token in [jobParser.Git_repo_urls]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(jobParser.Git_repo_urls)
                self.state = 76 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 75
                    self.match(jobParser.Identifier)
                    self.state = 78 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break

                pass
            elif token in [jobParser.Git_repo_branches]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(jobParser.Git_repo_branches)

                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 81
                    self.match(jobParser.Identifier)
                    self.state = 84 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break

                pass
            elif token in [jobParser.Credential_name]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(jobParser.Credential_name)
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 87
                    self.match(jobParser.Identifier)
                    self.state = 90 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Build_triggers_scopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def triggers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.TriggersContext)
            else:
                return self.getTypedRuleContext(jobParser.TriggersContext,i)


        def getRuleIndex(self):
            return jobParser.RULE_build_triggers_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuild_triggers_scope" ):
                listener.enterBuild_triggers_scope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuild_triggers_scope" ):
                listener.exitBuild_triggers_scope(self)




    def build_triggers_scope(self):

        localctx = jobParser.Build_triggers_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_build_triggers_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(jobParser.T__7)
            self.state = 95
            self.match(jobParser.T__5)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jobParser.T__8) | (1 << jobParser.T__9) | (1 << jobParser.T__10))) != 0):
                self.state = 96
                self.triggers()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriggersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poll_scm(self):
            return self.getTypedRuleContext(jobParser.Poll_scmContext,0)


        def build_priodically(self):
            return self.getTypedRuleContext(jobParser.Build_priodicallyContext,0)


        def build_after_other_projects(self):
            return self.getTypedRuleContext(jobParser.Build_after_other_projectsContext,0)


        def getRuleIndex(self):
            return jobParser.RULE_triggers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggers" ):
                listener.enterTriggers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggers" ):
                listener.exitTriggers(self)




    def triggers(self):

        localctx = jobParser.TriggersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_triggers)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jobParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.poll_scm()
                pass
            elif token in [jobParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.build_priodically()
                pass
            elif token in [jobParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.build_after_other_projects()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poll_scmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.PatternContext)
            else:
                return self.getTypedRuleContext(jobParser.PatternContext,i)


        def Ignore_post_commit_hooks(self):
            return self.getToken(jobParser.Ignore_post_commit_hooks, 0)

        def Yes(self):
            return self.getToken(jobParser.Yes, 0)

        def No(self):
            return self.getToken(jobParser.No, 0)

        def getRuleIndex(self):
            return jobParser.RULE_poll_scm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoll_scm" ):
                listener.enterPoll_scm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoll_scm" ):
                listener.exitPoll_scm(self)




    def poll_scm(self):

        localctx = jobParser.Poll_scmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_poll_scm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(jobParser.T__8)
            self.state = 110
            self.match(jobParser.T__5)

            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 111
                    self.pattern() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jobParser.Ignore_post_commit_hooks:
                self.state = 117
                self.match(jobParser.Ignore_post_commit_hooks)
                self.state = 118
                _la = self._input.LA(1)
                if not(_la==jobParser.Yes or _la==jobParser.No):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jobParser.T__11:
                self.state = 121
                self.pattern()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Build_after_other_projectsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Trigger_method(self):
            return self.getToken(jobParser.Trigger_method, 0)

        def DIGIT(self):
            return self.getToken(jobParser.DIGIT, 0)

        def Project_names(self):
            return self.getToken(jobParser.Project_names, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(jobParser.Identifier)
            else:
                return self.getToken(jobParser.Identifier, i)

        def getRuleIndex(self):
            return jobParser.RULE_build_after_other_projects

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuild_after_other_projects" ):
                listener.enterBuild_after_other_projects(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuild_after_other_projects" ):
                listener.exitBuild_after_other_projects(self)




    def build_after_other_projects(self):

        localctx = jobParser.Build_after_other_projectsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_build_after_other_projects)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(jobParser.T__9)
            self.state = 130
            self.match(jobParser.T__5)
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jobParser.Trigger_method]:
                self.state = 131
                self.match(jobParser.Trigger_method)
                self.state = 132
                self.match(jobParser.DIGIT)

                self.state = 134
                self.match(jobParser.Project_names)
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 135
                    self.match(jobParser.Identifier)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break

                pass
            elif token in [jobParser.Project_names]:
                self.state = 140
                self.match(jobParser.Project_names)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 141
                    self.match(jobParser.Identifier)
                    self.state = 144 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jobParser.Identifier):
                        break


                self.state = 146
                self.match(jobParser.Trigger_method)
                self.state = 147
                self.match(jobParser.DIGIT)
                pass
            elif token in [jobParser.T__6]:
                pass
            else:
                pass
            self.state = 150
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Build_priodicallyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.PatternContext)
            else:
                return self.getTypedRuleContext(jobParser.PatternContext,i)


        def getRuleIndex(self):
            return jobParser.RULE_build_priodically

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuild_priodically" ):
                listener.enterBuild_priodically(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuild_priodically" ):
                listener.exitBuild_priodically(self)




    def build_priodically(self):

        localctx = jobParser.Build_priodicallyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_build_priodically)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(jobParser.T__10)
            self.state = 153
            self.match(jobParser.T__5)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jobParser.T__11:
                self.state = 154
                self.pattern()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(jobParser.DIGIT)
            else:
                return self.getToken(jobParser.DIGIT, i)

        def getRuleIndex(self):
            return jobParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = jobParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(jobParser.T__11)
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==jobParser.T__12 or _la==jobParser.DIGIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            _la = self._input.LA(1)
            if not(_la==jobParser.T__12 or _la==jobParser.DIGIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 165
            _la = self._input.LA(1)
            if not(_la==jobParser.T__12 or _la==jobParser.DIGIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 166
            _la = self._input.LA(1)
            if not(_la==jobParser.T__12 or _la==jobParser.DIGIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 167
            _la = self._input.LA(1)
            if not(_la==jobParser.T__12 or _la==jobParser.DIGIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Building_scopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def build_directives(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jobParser.Build_directivesContext)
            else:
                return self.getTypedRuleContext(jobParser.Build_directivesContext,i)


        def getRuleIndex(self):
            return jobParser.RULE_building_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuilding_scope" ):
                listener.enterBuilding_scope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuilding_scope" ):
                listener.exitBuilding_scope(self)




    def building_scope(self):

        localctx = jobParser.Building_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_building_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(jobParser.T__13)
            self.state = 170
            self.match(jobParser.T__5)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jobParser.T__14) | (1 << jobParser.T__15) | (1 << jobParser.T__16) | (1 << jobParser.T__17))) != 0):
                self.state = 171
                self.build_directives()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(jobParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Build_directivesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shell_command(self):
            return self.getTypedRuleContext(jobParser.Shell_commandContext,0)


        def goals_option(self):
            return self.getTypedRuleContext(jobParser.Goals_optionContext,0)


        def root_pom(self):
            return self.getTypedRuleContext(jobParser.Root_pomContext,0)


        def post_step(self):
            return self.getTypedRuleContext(jobParser.Post_stepContext,0)


        def getRuleIndex(self):
            return jobParser.RULE_build_directives

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuild_directives" ):
                listener.enterBuild_directives(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuild_directives" ):
                listener.exitBuild_directives(self)




    def build_directives(self):

        localctx = jobParser.Build_directivesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_build_directives)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jobParser.T__14]:
                self.state = 179
                self.shell_command()
                pass
            elif token in [jobParser.T__15]:
                self.state = 180
                self.goals_option()
                pass
            elif token in [jobParser.T__16]:
                self.state = 181
                self.root_pom()
                pass
            elif token in [jobParser.T__17]:
                self.state = 182
                self.post_step()
                pass
            else:
                raise NoViableAltException(self)
